--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
-    "react": "^18",
+    "next": "^14.2.18",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
